--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,7 @@ Frozen-Flask==0.15
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
+ua-parser==0.8.0
+user-agents==2.0
 Werkzeug==0.16.0
 WTForms==2.2.1
