--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ Flask==1.1.1
 Flask-WTF==0.14.2
 Frozen-Flask==0.15
 itsdangerous==1.1.0
-Jinja2==2.10.3
+Jinja2==2.11.3
 MarkupSafe==1.1.1
+python-dotenv==0.14.0
 ua-parser==0.8.0
 user-agents==2.0
 Werkzeug==0.16.0
