--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-Click==7.0
-Flask==1.1.1
+click==8.0.3
+Flask==2.0.2
 Flask-WTF==0.14.2
 Frozen-Flask==0.15
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
 python-dotenv==0.14.0
 ua-parser==0.8.0
 user-agents==2.0
-Werkzeug==0.16.0
+Werkzeug==2.0.2
 WTForms==2.2.1
